--- a/build.gradle
+++ b/build.gradle
@@ -76,6 +76,8 @@ uploadArchives {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
             pom.version = '0.0.331'
+            pom.groupId = 'jp.co.ricoh.cotos'
+            pom.artifactId = 'common-libraries'
         }
     }
 }
