--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -34,6 +34,21 @@ cotos:
       momEmpId: 99999999
       operatorName: dummy_batch_operator
       operatorOrgName: dummy_batch_operator_org
+  eim:
+    hostName: app-dev28
+    domainName: ope.azure.ricoh-eim.com
+    systemAuthPath: services/v1/system/auth
+    apiAuthPath: api/v1/auth 
+    loginUserName: test02
+    loginPassword: P@ssw0rd
+    fileUploadPath: services/v1/files/upload
+    appId: RFG_CTS_CNT_02
+    appIdMonthDB: RFG_CTS_CNT_01
+    resourcesPath: resources/v3/apps/
+    documentsPath: documents
+    fileDownloadPath: services/v1/files/download
+    modelId: DetailForm^CotosContractModel
+    systemName: CTSCont02
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
