--- a/src/test/resources/config/application-ci.yml
+++ b/src/test/resources/config/application-ci.yml
@@ -1,8 +1,8 @@
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
-    username: cotos_ci_backlog13
-    password: cotos_ci_backlog13
+    username: cotos_ci_commonlibs_sim_re
+    password: cotos_ci_commonlibs_sim_re
     driverClassName: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
@@ -13,4 +13,4 @@ spring:
         show_sql: true
         use_sql_comments: false
         format_sql: false
-        default_schema: cotos_ci_backlog13
+        default_schema: cotos_ci_commonlibs_sim_re
