--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -42,12 +42,12 @@ cotos:
       operatorName: dummy_batch_operator
       operatorOrgName: dummy_batch_operator_org
   eim:
-    hostName: rfg3
-    domainName: eim.ricoh.com
+    hostName: app-dev28
+    domainName: ope.azure.ricoh-eim.com
     systemAuthPath: services/v1/system/auth
     apiAuthPath: api/v1/auth
-    loginUserName: App-Deploy-User009
-    loginPassword: 65adb940
+    loginUserName: test02
+    loginPassword: P@ssw0rd
     fileUploadPath: services/v1/files/upload
     appId: RFG_CTS_CNT_02
     appIdMonthDB: RFG_CTS_CNT_01
