バーコード生成処理追加

--- a/build.gradle
+++ b/build.gradle
@@ -61,6 +61,8 @@ dependencies {
     testCompile group: 'com.ninja-squad', name: 'DbSetup', version: '2.1.0'
     testCompile 'org.apache.commons:commons-lang3:3.4'
     testRuntime('com.h2database:h2')
+
+    compile group: 'net.sf.barcode4j', name: 'barcode4j', version: '2.1'
 }
 
 sonarqube {
