--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -68,7 +68,7 @@ spring:
       ddl-auto: none
     properties:
       hibernate:
-        show_sql: true
+        show_sql: false
         use_sql_comments: true
         format_sql: true
         default_schema: cotos_ci_commonlibs
