--- a/build.gradle
+++ b/build.gradle
@@ -64,6 +64,7 @@ dependencies {
 
     compile group: 'net.sf.barcode4j', name: 'barcode4j', version: '2.1'
     compile group: 'com.ibm.icu', name: 'icu4j', version: '64.2'
+    compile group: 'net.lingala.zip4j', name: 'zip4j', version: '1.3.2'
 }
 
 sonarqube {
@@ -79,7 +80,7 @@ uploadArchives {
     repositories {
         mavenDeployer {
             repository url: "file://${repo.absolutePath}"
-            pom.version = '0.0.523'
+            pom.version = '0.0.524'
             pom.groupId = 'jp.co.ricoh.cotos'
             pom.artifactId = 'common-libraries'
         }
