--- a/src/test/resources/config/application.yml
+++ b/src/test/resources/config/application.yml
@@ -59,8 +59,8 @@ cotos:
 spring:
   datasource:
     url: jdbc:oracle:thin:@dev-db.cotos.ricoh.co.jp:1521/pdb1
-    username: ci_common_release_0308_backlog
-    password: ci_common_release_0308_backlog
+    username: cotos_ci_commonlibs
+    password: cotos_ci_commonlibs
     driverClassName: oracle.jdbc.OracleDriver
   jpa:
     database-platform: org.hibernate.dialect.Oracle12cDialect
@@ -71,7 +71,7 @@ spring:
         show_sql: true
         use_sql_comments: true
         format_sql: true
-        default_schema: ci_common_release_0308_backlog
+        default_schema: cotos_ci_commonlibs
         proc:
           param_null_passing: true
         enable_lazy_load_no_trans: true
